Fix color resources path variable
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3336 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1360,7 +1360,7 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources/images/impl/gui"/>
             <zipfileset dir="${resources}/styles"
                 prefix="resources/styles"/>
-            <zipfileset dir="resources/colors"
+            <zipfileset dir="${resources}/colors"
                 prefix="resources/colors"/>
         </jar>
     </target>
