branding colors are obtained from the main color.properties file
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3337 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1565,6 +1565,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources/images/plugin/branding"/>
             <zipfileset dir="${resources}/styles"
                 prefix="resources/styles"/>
+            <zipfileset dir="${resources}/colors"
+                prefix="resources/colors"/>
             </jar>
         </target>
 
