Application main constants moved to application.properties file in the main resources directory.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3341 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1354,14 +1354,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/service/gui"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/gui"
                 prefix="net/java/sip/communicator/impl/gui"/>
-            <zipfileset dir="${resources}/images/logo"
-                prefix="resources/images/logo"/>
-            <zipfileset dir="${resources}/images/impl/gui"
-                prefix="resources/images/impl/gui"/>
-            <zipfileset dir="${resources}/styles"
-                prefix="resources/styles"/>
-            <zipfileset dir="${resources}/colors"
-                prefix="resources/colors"/>
+            <zipfileset dir="${resources}"
+                prefix="resources"/>
         </jar>
     </target>
 
@@ -1561,12 +1555,8 @@ javax.swing.event, javax.swing.border"/>
             manifest="${src}/net/java/sip/communicator/plugin/branding/branding.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/branding"
                 prefix="net/java/sip/communicator/plugin/branding"/>
-            <zipfileset dir="${resources}/images/plugin/branding"
-                prefix="resources/images/plugin/branding"/>
-            <zipfileset dir="${resources}/styles"
-                prefix="resources/styles"/>
-            <zipfileset dir="${resources}/colors"
-                prefix="resources/colors"/>
+            <zipfileset dir="${resources}"
+                prefix="resources"/>
             </jar>
         </target>
 
@@ -1619,6 +1609,8 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="${lib.noinst}/jcalendar-1.3.2.jar" prefix=""/>
             <zipfileset dir="${resources}/images/plugin/extendedcallhistorysearch"
                 prefix="resources/images/plugin/extendedcallhistorysearch"/>
+            <zipfileset dir="${resources}/colors"
+                prefix="resources/colors"/>
         </jar>
     </target>
 
