Fix tab text color and size.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3342 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colorResources.properties
+++ b/resources/colors/colorResources.properties
@@ -20,6 +20,7 @@ desktopBackgroundColor=FAFAFA
 textColor=333333
 inactiveTextColor=999999
 menuDisabledForeground=999999
+tabbedPaneHighlight=F9750A
 
 # Custom components GUI constants
 historyIncomingCallBackground=F9FFC5
