Make tab colors configurable and add them to the color properties.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3349 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colorResources.properties
+++ b/resources/colors/colorResources.properties
@@ -1,33 +1,110 @@
 # Look & Feel color constants
+
+# Used to paint a gradient for a check box or a radio button.
 buttonGradientDark=3f6296
+
+# Used to paint a gradient for sliders.
 sliderGradientDark=3f6296
+
+# Used for tooltip borders, progress bar selection background, scroll bar
+# thumb shadow, tabbed pane focus, toolbar docking foreground.
 primaryControlDarkShadow=3f6296
+
+# Used for progress bar border, tooltip border inactive, tooltip foreground
+# inactive, scroll bar dark shadow.
 controlDarkShadow=3f6296
+
+# Used to paint a gradient for a check box or a radio button.
 buttonGradientLight=C0C0C0
+
+# These two are not used for now.
 scrollBarTrackHighlight=C0C0C0
 scrollBarDarkShadow=C0C0C0
+
+# Used for text hightlight color, window title background, scroll bar thumb
+# hightlight, split pane devider focus color, tree line, tree hash,
+# toolBar floating foreground.
 primaryControlColor=C0C0C0
+
+# Tabbed pane shadow.
 controlShadow=C0C0C0
+
+# Used to paint a gradient for sliders.
 sliderGradientLight=D3DDED
+
+# Table grid color.
 tableGrid=D3DDED
+
+# Used to paint a focused split pane devider.
 splitPaneDeviderFocused=D3DDED
+
+# Foreground color for selected components.
 selectionForeground=474747
+
+# Background color for selected components.
 selectionBackground=EEEEEE
+
+# Used for window title inactive background, menu background, tooltip
+# inactive background, combo box background, desktop icon background,
+# scroll bar background, tabbed pane tab area background.
 controlColor=EEEEEE
+
+# Tabbed pane border highlight color.
 tabbedPaneBorderHighlight=96A9C6
+
+# Used for menu selected background, focus color, slider foreground,
+# progress bar foreground, combo box selection background, scroll bar thumb
 primaryControlShadow=96A9C6
+
+# Background color for all windows.
 desktopBackgroundColor=FAFAFA
+
+# Text color for all texts.
 textColor=333333
+
+# Used for inactive labels, text areas, etc.
 inactiveTextColor=999999
+
+# Foreground color for disabled menus.
 menuDisabledForeground=999999
-tabbedPaneHighlight=F9750A
+
+# Color used in tab title for non read incoming messages.
+tabTitleHighlight=F9750A
+
+# Tab default text color.
+tabTitle=EAEAEA
 
 # Custom components GUI constants
+
+# Background color for incoming call lines in the call list.
 historyIncomingCallBackground=F9FFC5
+
+# Background color for outgoing call lines in the call list.
 historyOutgoingCallBackground=F3F4F7
+
+# Selection color for all lists (contact list, call list, chat rooms list, etc.)
 listSelectionColor=D1D4E1
+
+# Selection border color of all lists (contact list, call list, chat rooms list, etc.)
 listSelectionBorderColor=8EA0BC
-# Used for title panels and call participant dialpad panel
+
+# Used for title panels (like the one in the settings window) and 
+# call participant dialpad panel.
 gradientDarkColor=E6E6E6
+
+# Used as the light color for some gradients like in title panels,
+# call participant dialpad panel, chat contact panel ( the one in chat window
+# that contains the contact information) 
 gradientLightColor=FFFFFF
+
+# Used for some custom borders, like the border in the chat window.
 borderColor=8EA0BC
+
+# Splash screen text color.
+splashScreenTextColor=FFFFFF
+
+# Splash screen title color.
+splashScreenTitleColor=EAEAEA
+
+# Background color for the contact list background.
+contactListBackground=EFEFEF
