default tab title
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3350 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colorResources.properties
+++ b/resources/colors/colorResources.properties
@@ -72,7 +72,7 @@ menuDisabledForeground=999999
 tabTitleHighlight=F9750A
 
 # Tab default text color.
-tabTitle=EAEAEA
+tabTitle=474747
 
 # Custom components GUI constants
 
