Allows to set an image background to main windows.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3354 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/utils/images.properties
+++ b/src/net/java/sip/communicator/impl/gui/utils/images.properties
@@ -62,6 +62,8 @@ TEXT_ITALIC_ROLLOVER_BUTTON=resources/images/impl/gui/buttons/textItalicRollover
 TEXT_UNDERLINED_ROLLOVER_BUTTON=resources/images/impl/gui/buttons/textUnderlinedRollover.png
 DIAL_BUTTON=resources/images/impl/gui/buttons/dialButton.png
 INVITE_DIALOG_ICON=resources/images/impl/gui/common/inviteDialogIcon.png
+DIAL_BUTTON_BG=resources/images/impl/gui/buttons/dialButtonBg.png
+DIAL_BUTTON_ROLLOVER_BG=resources/images/impl/gui/buttons/dialButtonRolloverBg.png
 
 MSG_TOOLBAR_BUTTON_BG=resources/images/impl/gui/buttons/msgToolbarBg.png
 MSG_TOOLBAR_ROLLOVER_BUTTON_BG=resources/images/impl/gui/buttons/msgToolBarRolloverBg.png
@@ -189,3 +191,5 @@ LEAVE_ICON=resources/images/impl/gui/common/leave.png
 WINDOW_LOGO=resources/images/impl/gui/common/windowLogo.png
 
 STATUS_SEPARATOR_ICON=resources/images/impl/gui/common/statusSeparator1.png
+
+MAIN_WINDOW_BACKGROUND=resources/images/impl/gui/common/mainWindowBackground.png
