--- a/src/net/java/sip/communicator/plugin/branding/resources.properties
+++ b/src/net/java/sip/communicator/plugin/branding/resources.properties
@@ -4,13 +4,13 @@ loading=Loading
 aboutMenuEntry=About
 ok=OK
 basedOn=based on
-welcomeMessage=<DIV id=\"message\">The {0} is currently under active development. \
+welcomeMessage=<DIV color={0}>The {1} is currently under active development. \
                The version you are running is only experimental and MAY NOT \
-               work as expected. Please refer to {1} for more information.</DIV>
-copyright=<DIV id=\"message\"><font size=3>(c)2003-2007 Copyright \
+               work as expected. Please refer to {2} for more information.</DIV>
+copyright=<DIV><font size=3 color={0}>(c)2003-2007 Copyright \
           <b>sip-communicator.org</b>. All rights reserved. Visit \
           <a href="http://sip-communicator.org">http://sip-communicator.org</a>.\
           </font></DIV>
-license=<DIV id=\"message\">The <b>SIP Communicator</b> is distributed under \
+license=<DIV color={0}>The <b>SIP Communicator</b> is distributed under \
         the terms of the LGPL (<a href=\"http://www.gnu.org\">\
         http://www.gnu.org</a>).</DIV>
