Send SMS interface.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3366 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/utils/images.properties
+++ b/src/net/java/sip/communicator/impl/gui/utils/images.properties
@@ -62,9 +62,9 @@ TEXT_ITALIC_ROLLOVER_BUTTON=resources/images/impl/gui/buttons/textItalicRollover
 TEXT_UNDERLINED_ROLLOVER_BUTTON=resources/images/impl/gui/buttons/textUnderlinedRollover.png
 DIAL_BUTTON=resources/images/impl/gui/buttons/dialButton.png
 INVITE_DIALOG_ICON=resources/images/impl/gui/common/inviteDialogIcon.png
+SEND_SMS_ICON=resources/images/impl/gui/common/gsm.png
 DIAL_BUTTON_BG=resources/images/impl/gui/buttons/dialButtonBg.png
 DIAL_BUTTON_ROLLOVER_BG=resources/images/impl/gui/buttons/dialButtonRolloverBg.png
-
 MSG_TOOLBAR_BUTTON_BG=resources/images/impl/gui/buttons/msgToolbarBg.png
 MSG_TOOLBAR_ROLLOVER_BUTTON_BG=resources/images/impl/gui/buttons/msgToolBarRolloverBg.png
 COPY_ICON=resources/images/impl/gui/buttons/copy.png
