productName property changed to applicationName - more appropriate.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3369 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,4 +1,4 @@
-productName=SIP Communicator
-productWebSite=http://sip-communicator.org
+applicationName=SIP Communicator
+applicationWebSite=http://sip-communicator.org
 fontName=Verdana
 fontSize=12
